# frappe_flutter_utils

./: README.md  pyproject.toml
flutter_utils/: hooks.py  install.py  modules.txt  patches.txt  utils.py
flutter_utils/api/: auth.py  banners.py
flutter_utils/config/: desktop.py
flutter_utils/flutter_utils/: handler.py
flutter_utils/flutter_utils/doctype/flutter_utils_settings/: flutter_utils_settings.js  flutter_utils_settings.json  flutter_utils_settings.py
flutter_utils/patches/v1_0/: create_otp_email_template.py
